reports: tests-pass demoted to future work; explain the blocker
the 0/0 was misleading. test-compile blocks before any test runs, and
the blockers are specific:
1. javac on the test sources hits 'package sun.reflect.annotation is
   not visible' -- jcommander's gradle test task already passes
   --add-exports for it (build.gradle.kts:92,95), my raw javac in
   scripts/run-jcommander-tests.sh:120 does not.
2. 18 of the remaining 33 errors are 'non-static method
   <K>newLinkedHashSet() cannot be referenced from a static context'
   -- J2K dropped the Java side's static utility methods inside a
   companion-object pattern that the .class exposes as instance.

named both in reports/jcommander-tests-pass.md with the proposed fix
(@JvmStatic post-pass, or layer original Java .class for utility
classes ahead of the converted kotlin). README mention scoped to
'demoted until those two land'.